# AQI-Predictor

./: .env.example  .gitignore  README.md  problem statement.txt  pyproject.toml  requirements-notebooks.txt  requirements.txt  run_feature_pipeline.py  run_pipeline.py  run_training_pipeline.py
.github/workflows/: feature_pipeline.yml  training_pipeline.yml
.streamlit/: config.toml  secrets.toml.example
aqi_predictor.egg-info/: PKG-INFO  SOURCES.txt
config/: settings.yaml
data/: backfill.csv
notebooks/: eda_quick.ipynb
report/: report.md
src/: dashboard.py
src/app/: streamlit_app.py
src/data/: openmeteo_client.py
src/features/: build_features.py
src/models/: metrics.py  sklearn_trainer.py  tf_trainer.py
src/pipelines/: backfill.py  feature_pipeline.py  training_pipeline.py
src/serving/: api.py  predict.py
src/utils/: hopsworks_login.py  mongo_store.py
